[PPC64] jdk/incubator/vector/*VectorTests failing

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • b26
    • ppc

      The following tests are failing with "bad AD file" because "PopCountVI" was not matched:
      jdk/incubator/vector/Byte128VectorTests.java
      jdk/incubator/vector/ByteMaxVectorTests.java
      jdk/incubator/vector/Short128VectorTests.java
      jdk/incubator/vector/ShortMaxVectorTests.java

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: