8287738: [PPC64] jdk/incubator/vector/*VectorTests failing